# SwiftEdge

./: index.html  package-lock.json  package.json
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  main.rs  models.rs  persistence.rs  state.rs  window.rs
src/app/: App.tsx
src/components/: AccountPanel.tsx  ClipboardList.tsx  Header.tsx  Icons.tsx  NotesWorkspace.tsx  PremiumPanelsView.tsx  SettingsPanel.tsx  Shell.tsx
src/features/auth/: types.ts
src/features/clipboard/: types.ts
src/features/notes/: types.ts
src/features/premium/: panelRegistry.ts
src/hooks/: useAuthSession.ts  useClipboardHistory.ts  useCloudSync.ts  useNotesStore.ts  useSettingsStore.ts  useSidebarController.ts
src/services/: desktop.ts  desktopControls.ts  firebase.ts  platform.ts  storage.ts
src/types/: cloud.ts  settings.ts
