[package]
name = "swiftedge"
version = "0.1.0"
description = "A hidden edge sidebar for clipboard history and premium web panels"
authors = ["hunter"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "swiftedge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
device_query = "2.1.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
sha2 = "0.10.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
